fix menu position on mobile

--- a/front/src/styles/Menu.module.scss
+++ b/front/src/styles/Menu.module.scss
@@ -24,3 +24,10 @@
     background-color: v.$dark-color;
   }
 }
+
+@media only screen and (max-width: 800px) {
+  .container {
+    left: unset;
+    right: 15px;
+  }
+}
